cabal-version:      2.4
name:               ping
version:            0.1.0.0

executable ping
    main-is:          Main.hs

    other-modules:    Parameters
                    , Net

    ghc-options: -threaded -rtsopts -with-rtsopts=-N

    build-depends:    base ^>=4.15.1.0
                    , ansi-terminal ^>=0.11.3
                    , network-simple ^>=0.4.5
                    , network ^>=3.1.4.0
                    , ip ^>=1.7.6
                    , text ^>=1.2.5.0
                    , async ^>=2.2.4
                    , random ^>=1.2.1.1
                    , bytestring ^>=0.11.4.0
                    , deepseq ^>=1.4
                    , cereal ^>=0.5.8
                    , time ^>=1.9.3

    hs-source-dirs:   app
    default-language: Haskell2010
